Add duration to track information